--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,5 @@
-# H2 ????????????
-spring.datasource.url=jdbc:h2:mem:runnerzdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
-# Hibernate DDL ????
-spring.jpa.hibernate.ddl-auto=update
-
-# H2 Console (Spring Boot 4 + Jakarta ??????? console, ??????)
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
-
-# ????
-logging.level.org.springframework.jdbc=DEBUG
-
+#spring.datasource.name=runnerz
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+spring.sql.init.mode=always
