--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.name=runnerz
-#spring.datasource.url=
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.name=runnerz
+spring.datasource.url=jdbc:postgresql://localhost:5432/runnerz
+spring.datasource.username=esther
+spring.datasource.password=password
 spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.devtools.restart.enabled=false
